--- a/WMS.Api/WMS.Api/appsettings.Development.json
+++ b/WMS.Api/WMS.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=win-h28ufp242fg;Initial Catalog=Warehouse_Management_System;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
 }
