--- a/WMS.Api/WMS.Api/appsettings.Development.json
+++ b/WMS.Api/WMS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=win-h28ufp242fg;Initial Catalog=Warehouse_Management_System;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-UVO0SDG;Initial Catalog=WarehouseManagement;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
 }
