--- a/WMS.Api/WMS.Api/WMS.Api.csproj
+++ b/WMS.Api/WMS.Api/WMS.Api.csproj
@@ -16,12 +16,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.63" />
+    <PackageReference Include="PdfSharpCore.Charting" Version="1.3.63" />
     <PackageReference Include="Serilog" Version="4.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
+    <PackageReference Include="Syncfusion.Licensing" Version="21.2.8" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="21.2.8" />
   </ItemGroup>
 
   <ItemGroup>
