--- a/WMS.Api/WMS.Api/appsettings.Development.json
+++ b/WMS.Api/WMS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=WIN-H28UFP242FG;Initial Catalog=Warehouse_Management_System;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=miraziz\\sqlexpress;Initial Catalog=WMS;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
 }
