--- a/WMS.Api/WMS.Api/appsettings.Development.json
+++ b/WMS.Api/WMS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=miraziz\\sqlexpress;Initial Catalog=WMS;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-UVO0SDG;Initial Catalog=WMS_API_DB;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
   }
-}
+} 
