--- a/WMS.Api/WMS.Api/appsettings.Development.json
+++ b/WMS.Api/WMS.Api/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=miraziz\\sqlexpress;Initial Catalog=WMS;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=miraziz\\sqlexpress;Initial Catalog=Warehouse;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+  },
+  "Jwt": {
+    "ValidIssuer": "https://locahost:7097",
+    "ValidAudience": "WMS.Api",
+    "SecretKey": "SuperSecretAbduraxmonKaliti123$5!asd12321zxcas",
+    "ExpiresInMinutes": "60"
   }
 }
