add email sending, update auth

--- a/WMS.Api/WMS.Api/appsettings.Development.json
+++ b/WMS.Api/WMS.Api/appsettings.Development.json
@@ -16,5 +16,12 @@
     "ValidAudience": "WMS.Api",
     "SecretKey": "SuperSecretAbduraxmonKaliti123$5!asd12321zxcas",
     "ExpiresInMinutes": "60"
+  },
+  "EmailConfiguration": {
+    "From": "khidoyato1997@gmail.com",
+    "Server": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "wms.uz",
+    "Password": "idmfjoaejlwbxqtr"
   }
 }
