--- a/WMS.Api/WMS.Api/WMS.Api.csproj
+++ b/WMS.Api/WMS.Api/WMS.Api.csproj
@@ -38,4 +38,8 @@
     <ProjectReference Include="..\WMS.Services\WMS.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
+  </ItemGroup>
+
 </Project>
